Added a new attribute to catalog items. The attribute is sugar content, and it has been implemented to display for each item on the page. I was originally going to do flavors for the items that had multiple flavor selections, but settled with Sugar Content as it applied to every item.

--- a/src/Web/Pages/Shared/_product.cshtml
+++ b/src/Web/Pages/Shared/_product.cshtml
@@ -5,12 +5,16 @@
     <input class="esh-catalog-button" type="submit" value="[ ADD TO BASKET ]" />
     <div class="esh-catalog-name">
         <span>@Model.Name</span>
+        
     </div>
     <div class="esh-catalog-price">
         <span>@Model.Price.ToString("N2")</span>
+        <br />
+        <span style="font-size: 14px; font-style: italic">*@Model.SugarContent grams of sugar</span>
     </div>
     <input type="hidden" asp-for="@Model.Id" name="id" />
     <input type="hidden" asp-for="@Model.Name" name="name" />
     <input type="hidden" asp-for="@Model.PictureUri" name="pictureUri" />
     <input type="hidden" asp-for="@Model.Price" name="price" />
 </form>
+
