--- a/src/Web/Views/Order/MyOrders.cshtml
+++ b/src/Web/Views/Order/MyOrders.cshtml
@@ -10,6 +10,8 @@
             <section class="esh-orders-title col-xs-2">Order number</section>
             <section class="esh-orders-title col-xs-4">Date</section>
             <section class="esh-orders-title col-xs-2">Total</section>
+            <section class="esh-orders-title col-xs-2">Tax</section>
+            <section class="esh-orders-title col-xs-2">Grand Total</section>
             <section class="esh-orders-title col-xs-2">Status</section>
             <section class="esh-orders-title col-xs-2"></section>
         </article>
@@ -17,21 +19,23 @@
         {
             @foreach (var item in Model)
             {
-                <article class="esh-orders-items row">
-                    <section class="esh-orders-item col-xs-2">@Html.DisplayFor(modelItem => item.OrderNumber)</section>
-                    <section class="esh-orders-item col-xs-4">@Html.DisplayFor(modelItem => item.OrderDate)</section>
-                    <section class="esh-orders-item col-xs-2">$ @Html.DisplayFor(modelItem => item.Total)</section>
-                    <section class="esh-orders-item col-xs-2">@Html.DisplayFor(modelItem => item.Status)</section>
-                    <section class="esh-orders-item col-xs-1">
-                        <a class="esh-orders-link" asp-controller="Order" asp-action="Detail" asp-route-orderId="@item.OrderNumber">Detail</a>
-                    </section>
-                    <section class="esh-orders-item col-xs-1">
-                        @if (item.Status.ToLower() == "submitted")
-                    {
-                            <a class="esh-orders-link" asp-controller="Order" asp-action="cancel" asp-route-orderId="@item.OrderNumber">Cancel</a>
-                        }
-                    </section>
-                </article>
+    <article class="esh-orders-items row">
+        <section class="esh-orders-item col-xs-2">@Html.DisplayFor(modelItem => item.OrderNumber)</section>
+        <section class="esh-orders-item col-xs-4">@Html.DisplayFor(modelItem => item.OrderDate)</section>
+        <section class="esh-orders-item col-xs-2">$ @Html.DisplayFor(modelItem => item.Total)</section>
+        <section class="esh-orders-item col-xs-2">$ @Html.DisplayFor(modelItem => item.Tax)</section>
+        <section class="esh-orders-item col-xs-2">$ @Html.DisplayFor(modelItem => item.GrandTotal)</section>
+        <section class="esh-orders-item col-xs-2">@Html.DisplayFor(modelItem => item.Status)</section>
+        <section class="esh-orders-item col-xs-1">
+            <a class="esh-orders-link" asp-controller="Order" asp-action="Detail" asp-route-orderId="@item.OrderNumber">Detail</a>
+        </section>
+        <section class="esh-orders-item col-xs-1">
+            @if (item.Status.ToLower() == "submitted")
+            {
+                <a class="esh-orders-link" asp-controller="Order" asp-action="cancel" asp-route-orderId="@item.OrderNumber">Cancel</a>
+            }
+        </section>
+    </article>
             }
         }
     </div>
